<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/warning"
            android:contentDescription="@string/image"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/txtheart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/fail"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:gravity="center"
            android:textStyle="normal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <com.balysv.materialripple.MaterialRippleLayout
            style="@style/RippleStyle.White"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5">

            <Button
                android:id="@+id/btn_cancel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="@color/white90"
                android:text="@string/cancel"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </com.balysv.materialripple.MaterialRippleLayout>

        <com.balysv.materialripple.MaterialRippleLayout
            style="@style/RippleStyle.White"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5">

            <Button
                android:id="@+id/btn_try"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="@color/orange"
                android:text="@string/try_again"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </com.balysv.materialripple.MaterialRippleLayout>

    </LinearLayout>

</LinearLayout>